--- a/pages/soporte.html
+++ b/pages/soporte.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,21 +9,22 @@
     <!-- Este es mi CSS -->
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
+
 <body>
-  
+
     <nav>
         <!-- este es mi navegador -->
         <ul>
-            <li><a class="enlace" href="../index.html"> Inicio</a></li> 
-            <li><a class="enlace" href="noticias.html"> Noticias</a></li> 
-            <li><a class="enlace" href="soporte.html"> Soporte</a></li> 
-            <li><a class="enlace" href="comunidad.html"> Comunidad</a></li> 
+            <li><a class="enlace" href="../index.html"> Inicio</a></li>
+            <li><a class="enlace" href="noticias.html"> Noticias</a></li>
+            <li><a class="enlace" href="soporte.html"> Soporte</a></li>
+            <li><a class="enlace" href="comunidad.html"> Comunidad</a></li>
             <li><a class="enlace" href="informacion.html">Información</a></li>
         </ul>
     </nav>
 
 
-    <header class="centrar-titulo" >
+    <header class="centrar-titulo">
         <!-- este es el titulo -->
         <h1>Bienvenido al Soporte de CTL</h1>
     </header>
@@ -32,15 +34,16 @@
 
     <main>
         <div class="centrar-titulo">
-            <h2 class="cuadro-color">A continuación, completa el formulario para poder ayudarte con tu problema y/o solucionar el bug.</h2>
+            <h2 class="cuadro-color">A continuación, completa el formulario para poder ayudarte con tu problema y/o
+                solucionar el bug.</h2>
         </div>
 
-        <div class="page-center" >
+        <div class="page-center">
 
             <div>
                 <a href="../index.html"> <img src="../img/logo.jpg" width="80" height="60" alt="logo"></a>
             </div>
-  
+
             <div class="form-soporte">
                 <!-- formulario para dar soporte -->
                 <form action="">
@@ -53,7 +56,8 @@
                             resumen del problema
                         </label>
 
-                        <textarea maxlength="400" class="texta1" placeholder="resume brevemente la situacion..." name="resumen-problema" id="" cols="30" rows="10"></textarea>
+                        <textarea maxlength="400" class="texta1" placeholder="resume brevemente la situacion..."
+                            name="resumen-problema" id="" cols="30" rows="10"></textarea>
                     </div>
 
 
@@ -62,19 +66,23 @@
                     </div>
                 </form>
             </div>
-  
+
             <div>
                 <!-- Estas son las redes sociales -->
                 <ul>
-                    <li><a target="_blank" href="https://www.patreon.com/home"> <img class="ptr" src="../img/patreon.png" alt="Patreon"></a></li>
-                    <li><a target="_blank" href="https://www.instagram.com/"> <img class="instw" src="../img/instagram.png" alt="instagram"></a></li>
-                    <li><a target="_blank" href="https://twitter.com/home"> <img class="instw" src="../img/twitter.png" alt="twitter"></a></li>
-                    <li><a target="_blank" href="https://discord.com/"> <img class="disc" src="../img/discord.png" alt="discord"></a></li>
+                    <li><a target="_blank" href="https://www.patreon.com/home"> <img class="ptr"
+                                src="../img/patreon.png" alt="Patreon"></a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/"> <img class="instw"
+                                src="../img/instagram.png" alt="instagram"></a></li>
+                    <li><a target="_blank" href="https://twitter.com/home"> <img class="instw" src="../img/twitter.png"
+                                alt="twitter"></a></li>
+                    <li><a target="_blank" href="https://discord.com/"> <img class="disc" src="../img/discord.png"
+                                alt="discord"></a></li>
                 </ul>
             </div>
         </div>
- </main>
-  
+    </main>
+
 
 
 
@@ -84,8 +92,10 @@
 
     <footer>
         <!-- pequeña nota -->
-        <h3>Siempre te pondremos obstáculos para avanzar, pero los errores no son parte de ellos, así que por favor ayúdanos a solucionarlos :)</h3>
+        <h3>Siempre te pondremos obstáculos para avanzar, pero los errores no son parte de ellos, así que por favor
+            ayúdanos a solucionarlos :)</h3>
     </footer>
 
 </body>
+
 </html>
