first responsive changes

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 
 <body>
 
-  <nav>
-    <!-- este es mi navegador -->
-    <ul>
-      <li><a class="enlace" href="index.html"> Inicio</a></li>
-      <li><a class="enlace" href="pages/noticias.html"> Noticias</a></li>
-      <li><a class="enlace" href="pages/soporte.html"> Soporte</a></li>
-      <li><a class="enlace" href="pages/comunidad.html"> Comunidad</a></li>
-      <li><a class="enlace" href="pages/informacion.html">Información</a></li>
-    </ul>
-  </nav>
-
-  <header class="centrar-titulo">
+  <header>
     <!-- este es el titulo del videojuego -->
     <h1>Chasing The Light</h1>
+
+    <nav>
+      <!-- este es mi navegador -->
+      <ul>
+        <li><a class="enlace" href="index.html"> Inicio</a></li>
+        <li><a class="enlace" href="pages/noticias.html"> Noticias</a></li>
+        <li><a class="enlace" href="pages/soporte.html"> Soporte</a></li>
+        <li><a class="enlace" href="pages/comunidad.html"> Comunidad</a></li>
+        <li><a class="enlace" href="pages/informacion.html">Información</a></li>
+      </ul>
+    </nav>
   </header>
 
 
@@ -37,7 +37,18 @@
 
 
   <main>
-    <div class="page-center">
+    <div>
+
+      <div>
+        <!-- Estas son las redes sociales -->
+        <ul>
+          <li><a target="_blank" href="https://www.patreon.com/home"> <img class="ptr" src="img/patreon.png"  alt="Patreon"></a></li>
+          <li><a target="_blank" href="https://www.instagram.com/"> <img class="instw" src="img/instagram.png"  alt="instagram"></a></li>
+          <li><a target="_blank" href="https://twitter.com/home"> <img class="instw" src="img/twitter.png"  alt="twitter"></a></li>
+          <li><a target="_blank" href="https://discord.com/"> <img class="disc" src="img/discord.png" alt="discord"></a> </li>
+        </ul>
+      </div>
+
       <div>
         <a href="index.html"> <img class="logo" src="img/logo.jpg" alt="logo"></a>
       </div>
@@ -47,19 +58,7 @@
         <img class="img1" src="img/arboles1.png" alt="arboles">
       </div>
 
-      <div>
-        <!-- Estas son las redes sociales -->
-        <ul>
-          <li><a target="_blank" href="https://www.patreon.com/home"> <img class="ptr" src="img/patreon.png"
-                alt="Patreon"></a></li>
-          <li><a target="_blank" href="https://www.instagram.com/"> <img class="instw" src="img/instagram.png"
-                alt="instagram"></a></li>
-          <li><a target="_blank" href="https://twitter.com/home"> <img class="instw" src="img/twitter.png"
-                alt="twitter"></a></li>
-          <li><a target="_blank" href="https://discord.com/"> <img class="disc" src="img/discord.png" alt="discord"></a>
-          </li>
-        </ul>
-      </div>
+      
 
     </div>
 
@@ -137,57 +136,11 @@
 
   <footer>
     <div>
-      <h3>Controles:</h3>
-    </div>
-
-    <div class="tabla">
-      <!-- Tabla donde se muestran los controles del juego -->
-      <table>
-        <tr>
-          <th>Arriba</th>
-          <td>W</td>
-        </tr>
-
-        <tr>
-          <th>Izquierda</th>
-          <td>A</td>
-        </tr>
-
-        <tr>
-          <th>Derecha</th>
-          <td>D</td>
-        </tr>
-
-        <tr>
-          <th>Abajo</th>
-          <td>S</td>
-        </tr>
-
-        <tr>
-          <th>Agacharse</th>
-          <td>Ctrl</td>
-        </tr>
-
-        <tr>
-          <th>Linterna</th>
-          <td>Shift</td>
-        </tr>
-
-
-        <tr>
-          <th>Interactuar</th>
-          <td>Enter</td>
-        </tr>
-
-        <tr>
-          <th>Menu</th>
-          <td>Esc</td>
-        </tr>
-      </table>
+      <h5> Siempre te estamos observando...</h4>
     </div>
 
     <div>
-      <h4> Siempre te estamos observando...</h4>
+      <h4>Por Heavens Path, todos los derechos reservados.</h4>
     </div>
   </footer>
 
