--- a/pages/comunidad.html
+++ b/pages/comunidad.html
@@ -12,86 +12,82 @@
 
 <body>
 
-  <nav>
-    <!-- este es mi navegador -->
-    <ul>
-      <li><a class="enlace" href="../index.html"> Inicio</a></li>
-      <li><a class="enlace" href="noticias.html"> Noticias</a></li>
-      <li><a class="enlace" href="soporte.html"> Soporte</a></li>
-      <li><a class="enlace" href="comunidad.html"> Comunidad</a></li>
-      <li><a class="enlace" href="informacion.html">Información</a></li>
-    </ul>
-  </nav>
-
-
-  <header class="centrar-titulo">
+  <header>
     <!-- este es el titulo -->
     <h1>Bienvenido a la Comunidad de CTL</h1>
+
+    <nav>
+      <!-- este es mi navegador -->
+      <ul>
+        <li><a class="enlace" href="../index.html"> Inicio</a></li>
+        <li><a class="enlace" href="noticias.html"> Noticias</a></li>
+        <li><a class="enlace" href="soporte.html"> Soporte</a></li>
+        <li><a class="enlace" href="comunidad.html"> Comunidad</a></li>
+        <li><a class="enlace" href="informacion.html">Información</a></li>
+      </ul>
+    </nav>
   </header>
 
 
 
 
 
+
   <main>
-
-    <div class="page-center">
-      <div>
-        <a href="../index.html"> <img src="../img/logo.jpg" width="80" height="60" alt="logo"></a>
-      </div>
-
-      <div>
-        <!-- Espacio para comentar -->
-        <div>
-          <h2 class="cuadro-color">
-            Eres libre de dejar un comentario acerca de nuestro juego!
-          </h2>
-        </div>
-
-
-        <div>
-          <h3>Introduce tus datos para dejar tu comentario:</h3>
-        </div>
-
-        <div>
-          <form action="">
-            <div>
-              <label for="">Usuario:</label>
-              <input name="usuario" placeholder="Usuario o correo electronico" type="text">
-            </div>
-
-
-            <div>
-              <label for="">Contraseña:</label>
-              <input name="contraseña" placeholder="Contraseña" type="password">
-            </div>
-
-            <div>
-              <label hidden for="">Comentarios</label>
-              <textarea class="texta2" placeholder="Cuéntanos tu opinión..." maxlength="600" name="" id="" cols="30"
-                rows="10"></textarea>
-            </div>
-
-            <div class="enviar2">
-              <input name="enviar" type="submit">
-            </div>
-          </form>
-        </div>
-      </div>
-
+    <div>
       <div>
         <!-- Estas son las redes sociales -->
         <ul>
-          <li><a target="_blank" href="https://www.patreon.com/home"> <img class="ptr" src="../img/patreon.png" alt="Patreon"></a></li>
-          <li><a target="_blank" href="https://www.instagram.com/"> <img class="instw" src="../img/instagram.png" alt="instagram"></a></li>
-          <li><a target="_blank" href="https://twitter.com/home"> <img class="instw" src="../img/twitter.png" alt="twitter"></a></li>
-          <li><a target="_blank" href="https://discord.com/"> <img class="disc" src="../img/discord.png"  alt="discord"></a></li>
+          <li><a target="_blank" href="https://www.patreon.com/home"> <img class="ptr" src="../img/patreon.png"  alt="Patreon"></a></li>
+          <li><a target="_blank" href="https://www.instagram.com/"> <img class="instw" src="../img/instagram.png"  alt="instagram"></a></li>
+          <li><a target="_blank" href="https://twitter.com/home"> <img class="instw" src="../img/twitter.png"  alt="twitter"></a></li>
+          <li><a target="_blank" href="https://discord.com/"> <img class="disc" src="../img/discord.png" alt="discord"></a> </li>
         </ul>
+      </div>
+
+      <div>
+        <a href="index.html"> <img class="logo" src="../img/logo.jpg" alt="logo"></a>
       </div>
     </div>
 
+    <div>
+      <!-- Espacio para comentar -->
+      <div>
+        <h2 class="cuadro-color">
+          Eres libre de dejar un comentario acerca de nuestro juego!
+        </h2>
+      </div>
 
 
+      <div>
+        <h3>Introduce tus datos para dejar tu comentario:</h3>
+      </div>
+
+      <div>
+        <form action="">
+          <div>
+            <label for="">Usuario:</label>
+            <input class="inp1" name="usuario" placeholder="Usuario o correo electronico" type="text">
+          </div>
+
+
+          <div>
+            <label for="">Contraseña:</label>
+            <input name="contraseña" placeholder="Contraseña" type="password">
+          </div>
+
+          <div>
+            <label hidden for="">Comentarios</label>
+            <textarea class="texta2" placeholder="Cuéntanos tu opinión..." maxlength="600" name="" id="" cols="30"
+              rows="10"></textarea>
+          </div>
+
+          <div class="enviar2">
+            <input name="enviar" type="submit">
+          </div>
+        </form>
+      </div>
+    </div>
 
     <div>
       <!-- Últimos comentarios -->
@@ -145,7 +141,13 @@
 
   <footer>
     <!-- pequeña nota -->
-    <h3>Podemos hacer muchas cosas, pero jamás les quitaremos su libertad de expresión :)</h3>
+    <div>
+      <h5>Podemos hacer muchas cosas, pero jamás les quitaremos su libertad de expresión :)</h5>
+    </div>
+
+    <div>
+      <h4>Por Heavens Path, todos los derechos reservados.</h4>
+    </div>
   </footer>
 
 </body>
