--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -52,98 +52,95 @@
     </div>
 
     <section class="noticias">
-      <div class="noticias2">
+      <div class="noticia">
       
         <div>
           <h2>V1.52 / jue 30/06/2022 23:59</h2>
         </div>
         <div>
-          <p class="p-noticia">
+          <p>
             ¡Ya está disponible la versión 1.52 de CTL!
             Estos son los principales cambios de la version:
           </p>
         </div>
   
         <div>
-          <ul class="li-noticia">
+          <ul>
             <li>Acceso desbloqueado al segundo sótano.</li>
             <li>Nuevo objeto clave: llave del candado oxidado.</li>
           </ul>
         </div>
         <div>
           <a href="noticias.html">(Puedes ver una lista con los cambios y correcciones detallados haciendo click
+            aquí.)
+          </a>
+        </div>
+      </div>
+  
+      <div class="noticia">
+        <div>
+          <h2>V1.51 / lun 30/05/2022 21:06</h2>
+        </div>
+        <div>
+          <p>
+            ¡Ya está disponible la versión 1.51 de CTL!
+            Estos son los principales cambios de la version:
+          </p>
+        </div>
+
+        <div>
+          <ul>
+            <li>Nueva zona desbloqueada: Pasillo de los recuerdos.</li>
+            <li>Nuevo soundtrack agregado compuesto por Suga_142.</li>
+            <li>Nuevo minijuego secreto</li>
+          </ul>
+        </div>
+        <div>
+          <a href="noticias.html">(Puedes ver una lista con los cambios y correcciones detallados haciendo click
+            aquí.)
+          </a>
+        </div>
+      </div>
+        
+      <div class="noticia">
+        <div>
+          <h2> El evento de Easter Eggs esta por llegar a su fin / jue 28/04/2022 09:37</h2>
+        </div>
+        <div>
+          <p>
+            ¡No te olvides de participar y obtener los minijuegos permanentemente! Es por tiempo limitado.
+          </p>
+        </div>
+
+        <div>
+          <p>El evento terminará el sábado 30/04/2022 a las 23:59, ¡No te olvides de recoger tus recompensas!</p>
+        </div>
+        <div>
+          <a href="noticias.html">(Puedes ver una lista con las novedades y recompensas del evento haciendo click
+            aquí.)
+          </a>
+        </div>
+      </div>
+  
+      <div class="noticia">
+        <div>
+          <h2> ¡El evento Easter Eggs ha llegado a CTL! / vi 01/04/2022 12:21</h2>
+        </div>
+        <div>
+          <p>
+            ¡Se parte del Evento de Easter Eggs en CTL y obtén recompensas y minijuegos por tiempo limitado!
+          </p>
+        </div>
+
+        <div>
+          <p>¡Además, mientras juegas el evento, podrás conocer parte importante de la historia, no te lo pierdas!</p>
+        </div>
+        <div>
+          <a href="noticias.html">(Puedes ver una lista con las novedades y recompensas del evento haciendo click
             aquí.)</a>
         </div>
       </div>
-  
-      <div class="noticias2">
-        <div class="noticia">
-          <div>
-            <h2>V1.51 / lun 30/05/2022 21:06</h2>
-          </div>
-          <div>
-            <p class="p-noticia">
-              ¡Ya está disponible la versión 1.51 de CTL!
-              Estos son los principales cambios de la version:
-            </p>
-          </div>
-  
-          <div>
-            <ul class="li-noticia">
-              <li>Nueva zona desbloqueada: Pasillo de los recuerdos.</li>
-              <li>Nuevo soundtrack agregado compuesto por Suga_142.</li>
-              <li>Nuevo minijuego secreto</li>
-            </ul>
-          </div>
-          <div>
-            <a href="noticias.html">(Puedes ver una lista con los cambios y correcciones detallados haciendo click
-              aquí.)</a>
-          </div>
-        </div>
-      </div>
-  
-  
-      <div class="noticias2">
-        <div class="noticia">
-          <div>
-            <h2> El evento de Easter Eggs esta por llegar a su fin / jue 28/04/2022 09:37</h2>
-          </div>
-          <div>
-            <p>
-              ¡No te olvides de participar y obtener los minijuegos permanentemente! Es por tiempo limitado.
-            </p>
-          </div>
-  
-          <div>
-            <p>El evento terminará el sábado 30/04/2022 a las 23:59, ¡No te olvides de recoger tus recompensas!</p>
-          </div>
-          <div>
-            <a href="noticias.html">(Puedes ver una lista con las novedades y recompensas del evento haciendo click
-              aquí.)</a>
-          </div>
-        </div>
-      </div>
-  
-      <div class="noticias2">
-        <div class="noticia">
-          <div>
-            <h2> ¡El evento Easter Eggs ha llegado a CTL! / vi 01/04/2022 12:21</h2>
-          </div>
-          <div>
-            <p>
-              ¡Se parte del Evento de Easter Eggs en CTL y obtén recompensas y minijuegos por tiempo limitado!
-            </p>
-          </div>
-  
-          <div>
-            <p>¡Además, mientras juegas el evento, podrás conocer parte importante de la historia, no te lo pierdas!</p>
-          </div>
-          <div>
-            <a href="noticias.html">(Puedes ver una lista con las novedades y recompensas del evento haciendo click
-              aquí.)</a>
-          </div>
-        </div>
-      </div>
+
     </section>
   </main>
 
@@ -156,10 +153,16 @@
 
   <footer>
     <!-- pequeña nota -->
-    <h3>
-      Te agradecemos por tomarte un momento de tu travesía intentando sobrevivir para leer las noticias,
-      ¡Hey, nos alegra saber que sigues vivo!
-    </h3>
+    <div>
+      <h5>
+        Te agradecemos por tomarte un momento de tu travesía intentando sobrevivir para leer las noticias,
+        ¡Hey, nos alegra saber que sigues vivo!
+      </h5>
+    </div>
+
+    <div>
+      <h4>Por Heavens Path, todos los derechos reservados.</h4>
+    </div>
   </footer>
 
 </body>
