--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
     <!-- este es el titulo del videojuego -->
     <h1>Chasing The Light</h1>
 
-    <nav>
-      <!-- este es mi navegador -->
-      <ul>
-        <li><a class="enlace" href="index.html"> Inicio</a></li>
-        <li><a class="enlace" href="pages/noticias.html"> Noticias</a></li>
-        <li><a class="enlace" href="pages/soporte.html"> Soporte</a></li>
-        <li><a class="enlace" href="pages/comunidad.html"> Comunidad</a></li>
-        <li><a class="enlace" href="pages/informacion.html">Información</a></li>
-      </ul>
-    </nav>
   </header>
+
+  <nav>
+    <!-- este es mi navegador -->
+    <ul>
+      <li><a class="enlace" href="index.html"> Inicio</a></li>
+      <li><a class="enlace" href="pages/noticias.html"> Noticias</a></li>
+      <li><a class="enlace" href="pages/soporte.html"> Soporte</a></li>
+      <li><a class="enlace" href="pages/comunidad.html"> Comunidad</a></li>
+      <li><a class="enlace" href="pages/informacion.html">Información</a></li>
+    </ul>
+  </nav>
 
 
 
@@ -37,7 +38,7 @@
 
 
   <main>
-    <div>
+    <div class="centro">
 
       <div>
         <!-- Estas son las redes sociales -->
@@ -50,13 +51,15 @@
       </div>
 
       <div>
-        <a href="index.html"> <img class="logo" src="img/logo.jpg" alt="logo"></a>
-      </div>
-
-      <div>
         <!--Esta es la imagen central  -->
         <img class="img1" src="img/arboles1.png" alt="arboles">
       </div>
+
+      <div>
+        <a href="index.html"> <img class="logo" src="img/logo.jpg" alt="logo"></a>
+      </div>
+
+  
 
       
 
@@ -135,6 +138,7 @@
 
 
   <footer>
+    <!-- pequeña nota -->
     <div>
       <h5> Siempre te estamos observando...</h4>
     </div>
