--- a/pages/comunidad.html
+++ b/pages/comunidad.html
@@ -16,17 +16,18 @@
     <!-- este es el titulo -->
     <h1>Bienvenido a la Comunidad de CTL</h1>
 
-    <nav>
-      <!-- este es mi navegador -->
-      <ul>
-        <li><a class="enlace" href="../index.html"> Inicio</a></li>
-        <li><a class="enlace" href="noticias.html"> Noticias</a></li>
-        <li><a class="enlace" href="soporte.html"> Soporte</a></li>
-        <li><a class="enlace" href="comunidad.html"> Comunidad</a></li>
-        <li><a class="enlace" href="informacion.html">Información</a></li>
-      </ul>
-    </nav>
   </header>
+
+  <nav>
+    <!-- este es mi navegador -->
+    <ul>
+      <li><a class="enlace" href="../index.html"> Inicio</a></li>
+      <li><a class="enlace" href="noticias.html"> Noticias</a></li>
+      <li><a class="enlace" href="soporte.html"> Soporte</a></li>
+      <li><a class="enlace" href="comunidad.html"> Comunidad</a></li>
+      <li><a class="enlace" href="informacion.html">Información</a></li>
+    </ul>
+  </nav>
 
 
 
@@ -34,7 +35,7 @@
 
 
   <main>
-    <div>
+    <div class="centro">
       <div>
         <!-- Estas son las redes sociales -->
         <ul>
@@ -46,7 +47,12 @@
       </div>
 
       <div>
-        <a href="index.html"> <img class="logo" src="../img/logo.jpg" alt="logo"></a>
+        <!--Esta es la imagen central  -->
+        <img class="img1" src="../img/arboles1.png" alt="arboles">
+      </div>
+
+      <div>
+        <a href="../index.html"> <img class="logo" src="../img/logo.jpg" alt="logo"></a>
       </div>
     </div>
 
