--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -76,7 +76,7 @@
           </ul>
         </div>
         <div>
-          <a href="noticias.html">(Puedes ver una lista con los cambios y correcciones detallados haciendo click
+          <a class="enlace2" href="noticias.html">(Puedes ver una lista con los cambios y correcciones detallados haciendo click
             aquí.)
           </a>
         </div>
@@ -101,7 +101,7 @@
           </ul>
         </div>
         <div>
-          <a href="noticias.html">(Puedes ver una lista con los cambios y correcciones detallados haciendo click
+          <a class="enlace2" href="noticias.html">(Puedes ver una lista con los cambios y correcciones detallados haciendo click
             aquí.)
           </a>
         </div>
@@ -121,7 +121,7 @@
           <p>El evento terminará el sábado 30/04/2022 a las 23:59, ¡No te olvides de recoger tus recompensas!</p>
         </div>
         <div>
-          <a href="noticias.html">(Puedes ver una lista con las novedades y recompensas del evento haciendo click
+          <a class="enlace2" href="noticias.html">(Puedes ver una lista con las novedades y recompensas del evento haciendo click
             aquí.)
           </a>
         </div>
@@ -141,7 +141,7 @@
           <p>¡Además, mientras juegas el evento, podrás conocer parte importante de la historia, no te lo pierdas!</p>
         </div>
         <div>
-          <a href="noticias.html">(Puedes ver una lista con las novedades y recompensas del evento haciendo click
+          <a class="enlace2" href="noticias.html">(Puedes ver una lista con las novedades y recompensas del evento haciendo click
             aquí.)</a>
         </div>
       </div>
